Fix crash when printing.

Don't ignore the return value of erase and/or don't assume
vector.end() never changes.

BUG: 285917